--- a/src/styles/1-utilities/_variables.scss
+++ b/src/styles/1-utilities/_variables.scss
@@ -1,16 +1,11 @@
 /* Typography */
 
-$showcase-heading: 4rem;
-$showcase-heading-2: 3.5rem;
-
-$heading-main: 2.5rem;
-$heading-main-2: 2rem;
-
-$heading-section: 1.8rem;
-
-$content-main: 1.6rem;
-$content: 1.4rem;
-$content-sm: 1.2rem;
+$showcase: 3.5rem;
+$heading-h1: 2.5rem;
+$heading-h2: 2rem;
+$heading-h3: 1.5rem;
+$heading-h4: 1.2rem;
+$content: 1.2rem;
 
 $extra-bold: 900;
 $bold: 700;
