--- a/src/styles/2-base/_basics.scss
+++ b/src/styles/2-base/_basics.scss
@@ -15,6 +15,14 @@ html{
     scroll-behavior: smooth;
 }
 
+html, body{
+    height: 100%;
+}
+
+#___gatsby, #gatsby-focus-wrapper{
+    height: 100%;
+}
+
 button, 
 .button{
     @include shadow;
@@ -61,9 +69,12 @@ textarea{
 }
 
 header{
-    padding: 2rem;
+    padding: 1.5rem;
     background-color: $black;
     color: white;
+    position: fixed;
+    width: 100%;
+    @include transition;
     .navbar{
         @include layout;
         display: grid;
@@ -76,4 +87,17 @@ header{
         grid-auto-flow: column;
         column-gap: 2rem;
     }
+}
+
+.sticky{
+    background-color: white;
+    color: $black;
+    @include shadow;
+}
+
+footer{
+    padding: 1.5rem;
+    background-color: $black;
+    color: white;
+    text-align: center;
 }
