--- a/src/styles/2-base/_typography.scss
+++ b/src/styles/2-base/_typography.scss
@@ -4,45 +4,31 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
-.showcase-heading{
-    font-size: $showcase-heading;
+.showcase{
+    font-size: $showcase;
     font-weight: $extra-bold;
 }
 
-h1, .showcase-heading-2{
-    font-size: $showcase-heading-2;
-    font-weight: $semi-bold;
-}
-
-h2, .heading-main{
-    font-size: $heading-main;
+h1{
+    font-size: $heading-h1;
     font-weight: $extra-bold;
 }
 
-.heading-main-2{
-    font-size: $heading-main-2;
+h2{
+    font-size: $heading-h2;
     font-weight: $extra-bold;
 }
 
-h3, .heading-section{
-    font-size: $heading-section;
+h3{
+    font-size: $heading-h3;
     font-weight: $extra-bold;
 }
 
-.heading-section-2{
-    font-size: $content;
-    font-weight: $bold;
+h4{
+    font-size: $heading-h4;
+    font-weight: $extra-bold;
 }
 
-.heading-section-3{
-    font-size: $content;
-    font-weight: $semi-bold;
-}
-
-.content-main{
-    font-size: $content-main;
-}
-
-p, .content-section{
+p, .content{
     font-size: $content;
 }
