Completed hero section

--- a/src/styles/1-utilities/_variables.scss
+++ b/src/styles/1-utilities/_variables.scss
@@ -12,7 +12,11 @@ $bold: 700;
 $semi-bold: 600;
 
 /* Colors */
-$black: #0F0E0E;
+$black: #131212;
+$black-1: #0C0C0C;
+
+$blue: #3A53D0;
+$blue-lt-1: #7BB1FF;
 
 $blue-dr-1: #072650;
 $blue-dr-2: #061B37;
