--- a/src/styles/1-utilities/_mixins.scss
+++ b/src/styles/1-utilities/_mixins.scss
@@ -48,7 +48,15 @@
 @mixin layout {
     max-width: 1280px;
     margin: 0 auto;
+    @media all and (max-width: 1900px) { 
+        max-width: 1690px;
+        margin: 0 auto;
+    }
     @media all and (max-width: 1690px) { 
+        max-width: 1400px;
+        margin: 0 auto;
+    }
+    @media all and (max-width: 1400px) { 
         max-width: 1280px;
         margin: 0 auto;
     }
