--- a/src/styles/4-layouts/wrapper.scss
+++ b/src/styles/4-layouts/wrapper.scss
@@ -1,5 +1,10 @@
 .mainWrapper{
     min-height: 100%;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    main{
+        margin-top: 5rem;
+    }
+    footer{
+        align-self: end;
+    }
 }
